# reference-implementation

./: CMakeLists.txt  LICENSE  README.md  cheat.cc  cola_machine.cc  guess_number.cc  number_revert.cc  pancake.cc  random_number.cc
.circleci/: config.yml
big_int/: big_int.cc  big_int.h
c/: CMakeLists.txt  cola_machine.c
cpp/: CMakeLists.txt  dungeon_crawl.cc  number_revert.cc
cpp/big_int/: big_int.cc
